--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
-    <!-- Base application themes. -->
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <!-- Customize your themes here. -->
+        <!-- Customize your theme here. -->
     </style>
 
 </resources>
